--- a/podem/pom.xml
+++ b/podem/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>test-generator</groupId>
-    <artifactId>test-generator-podem</artifactId>
+    <artifactId>podem</artifactId>
     <packaging>jar</packaging>
     <version>0.1.0</version>
     <build>
@@ -24,6 +24,11 @@
             <groupId>com.bpodgursky</groupId>
             <artifactId>jbool_expressions</artifactId>
             <version>1.8</version>
+        </dependency>
+        <dependency>
+            <groupId>test-generator</groupId>
+            <artifactId>basic</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
