--- a/basic/pom.xml
+++ b/basic/pom.xml
@@ -3,8 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>test-generator</groupId>
+        <artifactId>parent</artifactId>
+        <version>0.1.0</version>
+    </parent>
 
-    <groupId>test-generator</groupId>
     <artifactId>basic</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
@@ -27,9 +31,19 @@
             <version>1.8</version>
         </dependency>
         <dependency>
-            <groupId>javax.xml</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.1.12</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ws.xmlschema</groupId>
+            <artifactId>xmlschema-core</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>test-generator</groupId>
+            <artifactId>xsd2xml</artifactId>
+            <version>1.0</version>
         </dependency>
 
     </dependencies>
